test/conformance/kuttl/reports/background/exception/exception.yaml
apiVersion: kyverno.io/v2alpha1
kind: PolicyException
metadata:
  name: mynewpolex
  namespace: kyverno
spec:
  exceptions:
    - policyName: require-labels
      ruleNames:
        - require-team
  match:
    any:
      - resources:
          kinds:
            - ConfigMap
          names:
            - emergency
